# lightstep-tracer-cpp

./: .bazelrc  .gitignore  .gitmodules  BUILD.bazel  CMakeLists.txt  CONTRIBUTING.md  Makefile.am  README.md  WORKSPACE  bootstrap.sh  build.sh  circle.yml  config.h.in  configure.ac  tracer-export-map.ld
benchmark/: BUILD  CMakeLists.txt  buffer_benchmark.cpp  dummy_satellite.h  grpc_dummy_satellite.cpp  grpc_dummy_satellite.h  manual_tracer_benchmark.cpp  span_operations_benchmark.cpp  stream_dummy_satellite.cpp  stream_dummy_satellite.h  stream_session.cpp  stream_session.h  upload_benchmark.cpp
benchmark/tracer_upload_bench/: BUILD  benchmark_report.cpp  benchmark_report.h  main.cpp  span.cpp  span.h  span_drop_counter.h  tracer_upload_bench.proto  utility.cpp  utility.h
benchmark/upload/: CMakeLists.txt  dummy_satellite.cpp  dummy_satellite.h  grpc_dummy_satellite.cpp  grpc_dummy_satellite.h  main.cpp  stream_dummy_satellite.cpp  stream_dummy_satellite.h  stream_session.cpp  tracer.cpp  tracer.h  upload_benchmark.cpp  upload_benchmark.h  upload_benchmark_report.cpp  upload_benchmark_report.h
c++11/: CMakeLists.txt  version.h.in
c++11/example/: CMakeLists.txt  text_map_carrier.h  tutorial.cpp
c++11/src/: auto_recorder.cpp  auto_recorder.h  binary_carrier.cpp  binary_protocol.cpp  buffered_recorder.cpp  buffered_recorder.h  condition_variable_wrapper.h  custom_logger_sink.h  default_tags.h  grpc_transporter.cpp  grpc_transporter.h  key_value.cpp  lightstep_span.cpp  lightstep_span.h  lightstep_span_context.cpp  lightstep_span_context.h  lightstep_tracer_impl.cpp  lightstep_tracer_impl.h  logger.cpp  logger.h  main.go  manual_recorder.cpp  manual_recorder.h  nghttp2_async_transporter.cpp  nghttp2_async_transporter.h  propagation.cpp  propagation.h  recorder.h  report_builder.cpp  report_builder.h  rpc_recorder.cpp  tags.h  tracer.cpp  transporter.cpp  transporter.h  utility.cpp  utility.h
c++11/test/: CMakeLists.txt  in_memory_recorder.h  in_memory_tracer.h  in_memory_transporter.h  logger_test.cpp  propagation_test.cpp  recorder_test.cpp  span_generator.cpp  span_generator.h  testing_condition_variable_wrapper.cpp  testing_condition_variable_wrapper.h  tracer_test.cpp  utility_test.cpp
src/: Makefile  Makefile.am  address_info.cpp  address_info.h  atomic_bit_set.cpp  atomic_bit_set.h  auto_recorder.cpp  auto_recorder.h  binary_carrier.cpp  bipart_memory_stream.cpp  bipart_memory_stream.h  bipart_ostream_buffer.cpp  bipart_ostream_buffer.h  chunk_circular_buffer.cpp  chunk_circular_buffer.h  circular_buffer.cpp  circular_buffer.h  condition_variable.cpp  condition_variable.h  config.h.in  dynamic_load.cpp  grpc_transporter.cpp  impl.cc  impl.h  lightstep_immutable_span_context.cpp  lightstep_immutable_span_context.h  lightstep_span.cpp  lightstep_span.h  lightstep_span_context.cpp  lightstep_span_context.h  lightstep_tracer_factory.cpp  lightstep_tracer_factory.h  lightstep_tracer_impl.cpp  lightstep_tracer_impl.h  manual_recorder.cpp  manual_recorder.h  message_buffer.cpp  message_buffer.h  message_circular_buffer.cpp  message_circular_buffer.h  (+39 more)
src/c++11/: Makefile.am  config.h.in  impl.cc  impl.h  options.h  propagation.cc  propagation.h  recorder.cc  recorder.h  span.cc  span.h  tracer.cc  tracer.h  types.h  util.cc  util.h  value.h
src/common/: BUILD  atomic_bit_set.cpp  atomic_bit_set.h  atomic_unique_ptr.h  bipart_memory_stream.cpp  bipart_memory_stream.h  block_allocator.cpp  block_allocator.h  buffer_chain.cpp  chained_stream.cpp  chained_stream.h  chunk_circular_buffer.cpp  chunk_circular_buffer.h  chunked_http_framing.cpp  chunked_http_framing.h  circular_buffer.cpp  circular_buffer.h  circular_buffer2.h  circular_buffer_range.h  coded_stream.cc  coded_stream.h  composable_fragment_input_stream.cpp  composable_fragment_input_stream.h  condition_variable_wrapper.h  direct_coded_output_stream.cpp  direct_coded_output_stream.h  fast_random_number_generator.cpp  fast_random_number_generator.h  flat_map.h  fragment_array_input_stream.cpp  fragment_array_input_stream.h  fragment_input_stream.cpp  function_ref.h  hex_conversion.cpp  hex_conversion.h  in_memory_stream.cpp  lock_free_list.h  logger.cpp  logger.h  noncopyable.h  (+23 more)
src/lightstep_thrift/: lightstep_constants.cpp  lightstep_constants.h  lightstep_service.cpp  lightstep_service.h  lightstep_types.cpp  lightstep_types.h
src/network/: BUILD  dns_resolver.h  event.cpp  event.h  event_base.cpp  event_base.h  fixed_fragment_input_stream.h  fragment_array_input_stream.cpp  fragment_array_input_stream.h  fragment_input_stream.cpp  fragment_input_stream.h  fragment_set.cpp  fragment_set.h  ip_address.cpp  ip_address.h  no_dns_resolver.cpp  socket.cpp  socket.h  socket_unix.cpp  timer_event.cpp  timer_event.h  vector_write.cpp  vector_write.h
src/recorder/: BUILD  auto_recorder.cpp  auto_recorder.h  fork_aware_recorder.cpp  fork_aware_recorder.h  grpc_transporter.cpp  grpc_transporter.h  legacy_manual_recorder.cpp  legacy_manual_recorder.h  manual_recorder.cpp  manual_recorder.h  recorder.h  (+9 more)
test/: BUILD  CMakeLists.txt  Makefile.am  address_info_test.cpp  atomic_bit_set_test.cpp  auto_recorder_test.cpp  baseline_circular_buffer.h  baseline_circular_buffer_test.cpp  bipart_memory_stream_test.cpp  bipart_ostream_buffer_test.cpp  child_process_handle.cpp  child_process_handle.h  child_process_handle_windows.cpp  chunk_circular_buffer_test.cpp  circular_buffer.h  circular_buffer_test.cpp  composable_fragment_input_stream_wrapper.h  condition_variable_test.cpp  counting_metrics_observer.h  cppclient.cc  dynamic_load_test.cpp  fork_id_test.cpp  http_connection.cpp  http_connection.h  in_memory_async_transporter.cpp  in_memory_async_transporter.h  in_memory_collector.cpp  in_memory_collector.h  in_memory_recorder.h  in_memory_sync_transporter.cpp  in_memory_sync_transporter.h  in_memory_transporter.h  logger_test.cpp  manual_recorder_test.cpp  message_buffer_test.cpp  message_circular_buffer_test.cpp  mock_dns_resolution_callback.cpp  mock_dns_resolution_callback.h  number_simulation.cpp  number_simulation.h  (+26 more)
(+449 files in other folders)
